[gd_scene load_steps=3 format=3 uid="uid://uftx8e2j6d5f"]

[ext_resource type="Script" uid="uid://bv1sn1hqygubb" path="res://scenes/MainMenuScene/Multiplayer/multiplayer_options.gd" id="1_2yuo4"]
[ext_resource type="Theme" uid="uid://ciaxuhxqbvvvv" path="res://res/menu_theme.tres" id="1_q3dwk"]

[node name="MultiplayerOptions" type="Window"]
title = "Multiplayer Options"
initial_position = 1
size = Vector2i(200, 400)
min_size = Vector2i(200, 220)
theme = ExtResource("1_q3dwk")
theme_type_variation = &"ActionSidePanelButton"
script = ExtResource("1_2yuo4")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"WindowBackgroundPanel"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HostGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Start Game"

[node name="NameServerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Name for room:"

[node name="NameServerLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="JoinGameButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Join room
"

[node name="CodeFieldLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enter code for room:"

[node name="CodeFieldLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HostGameButton" to="." method="_on_host_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/JoinGameButton" to="." method="_on_join_game_button_pressed"]
